--- a/.github/workflows/ios-build-test.yml
+++ b/.github/workflows/ios-build-test.yml
@@ -17,8 +17,8 @@ jobs:
         flutter-version: '3.13.6'
     - name: Build Flutter
       run: flutter build ios --release --no-codesign
-    - name: Publish iOS Artefacts
-      uses: actions/upload-artifact@v1
-      with:
-        name: release-ios
-        path: ios
+#    - name: Publish iOS Artefacts
+#      uses: actions/upload-artifact@v1
+#      with:
+ #       name: release-ios
+ #       path: ios
