--- a/.github/workflows/ios-build-test.yml
+++ b/.github/workflows/ios-build-test.yml
@@ -12,7 +12,7 @@ jobs:
     - name: Checkout the code
       uses: actions/checkout@v2
     - name: Install and set Flutter version
-    - uses: subosito/flutter-action@v2
+      uses: subosito/flutter-action@v2
       with:
         flutter-version: '3.13.6'
     - name: Build Flutter
