--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,11 +53,14 @@ dependencies:
   json_annotation: ^4.8.1
   easy_debounce: ^2.0.3
   dynamic_color: ^1.6.7
-  material_color_utilities: ^0.11.1
+  material_color_utilities: ^0.5.0
   isar_flutter_libs: ^3.1.0+1
   url_launcher: ^6.1.14
 
-
+dev_dependencies:
+  flutter_test:
+    sdk: flutter
+    
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
