--- a/.github/workflows/ios-build-test.yml
+++ b/.github/workflows/ios-build-test.yml
@@ -1,4 +1,4 @@
-name: Flutter_iOS
+name: Flutter_Build
 
 on:
   push:
@@ -9,34 +9,41 @@ jobs:
     runs-on: macos-13
 
     steps:
-      - name: Checkout the code
-        uses: actions/checkout@v2
+    - name: Checkout the code
+      uses: actions/checkout@v2
 
-      - name: Install and set Flutter version
-        uses: subosito/flutter-action@v2
-        with:
-          flutter-version: '3.13.6'
+    - name: Install Flutter
+      uses: subosito/flutter-action@v2
+      with:
+        flutter-version: '3.13.6'
 
-      - name: Disable Flutter Analytics
-        run: flutter config --no-analytics
+    - name: Fetch dependencies
+      run: flutter pub get
 
-      - name: Install dependencies
-        run: flutter pub get
+    - name: Build iOS archive
+      run: |
+        flutter build ios --release
+        xcodebuild -workspace ios/Runner.xcworkspace \
+                   -scheme Runner \
+                   -configuration Release \
+                   -archivePath build/ios/archive/MyApp.xcarchive \
+                   archive
+      env:
+        CI: true
 
-      - name: Build iOS app
-        run: |
-          flutter devices
-          flutter build ios --release --no-codesign -d macos
+    - name: Export IPA
+      run: |
+        xcodebuild -exportArchive \
+                   -archivePath build/ios/archive/MyApp.xcarchive \
+                   -exportOptionsPlist ios/Runner/Info.plist \
+                   -exportPath build/ios/ipa
+      env:
+        FLUTTER_ROOT: /Users/runner/hostedtoolcache/flutter/stable-3.13.6-x64
+        PUB_CACHE: /Users/runner/.pub-cache
 
-      - name: Export IPA
-        run: |
-          xcodebuild -exportArchive \
-            -archivePath build/ios/archive/MyApp.xcarchive \
-            -exportOptionsPlist ios/Runner/Info.plist \
-            -exportPath build/ios/ipa
-
-      - name: Upload IPA artifact
-        uses: actions/upload-artifact@v3
-        with:
-          name: MyApp-IPA
-          path: build/ios/ipa/*.ipa
+    - name: Publish iOS Artefacts
+      if: success()
+      uses: actions/upload-artifact@v2
+      with:
+        name: ios-release
+        path: build/ios/ipa
