--- a/.github/workflows/ios-build-test.yml
+++ b/.github/workflows/ios-build-test.yml
@@ -24,6 +24,7 @@ jobs:
         run: flutter pub get
 
       - name: Build iOS app
+      
         run: |
           flutter devices
           flutter build ios --release --no-codesign -d macos
@@ -31,8 +32,8 @@ jobs:
                    -scheme Runner \
                    -configuration Release \
                    -archivePath build/ios/archive/MyApp.xcarchive \
-                   archive
-
+                   archive CODE_SIGNING_REQUIRED=NO
+                   
       - name: Export IPA
         run: |
           xcodebuild -exportArchive \
