--- a/.github/workflows/ios-build-test.yml
+++ b/.github/workflows/ios-build-test.yml
@@ -39,4 +39,25 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: MyApp-IPA
-          path: build/ios/ipa/*.ipa
+          path: build/ios
+         
+      # - name: Create GitHub Release
+      #   id: create_release
+      #   uses: actions/create-release@v1
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #   with:
+      #     tag_name: "${{ github.event.inputs.target }}" # 指定的更新版本号
+      #     release_name: "iOS Release ${{ github.event.inputs.target }}"
+      #     draft: false
+      #     prerelease: false
+
+      # - name: Upload IPA to Release
+      #   uses: actions/upload-release-asset@v1
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #   with:
+      #     upload_url: ${{ steps.create_release.outputs.upload_url }}
+      #     asset_path: build/app/outputs/flutter-apk/app-release.apk
+      #     asset_name: MyApp-release.apk
+      #     asset_content_type: application/vnd.android.package-archive/ipa/*.ipa
