--- a/.github/workflows/Flutter_APK.yml
+++ b/.github/workflows/Flutter_APK.yml
@@ -37,3 +37,24 @@ jobs:
         with:
           name: MyApp-APK
           path: build/app/outputs/flutter-apk/app-release.apk  # 上传生成的 APK 文件
+     
+      - name: Create GitHub Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: "${{ github.event.inputs.target }}" # 指定的更新版本号
+          release_name: "iOS Release ${{ github.event.inputs.target }}"
+          draft: false
+          prerelease: false
+
+      - name: Upload APK to Release
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: build/app/outputs/flutter-apk/app-release.apk
+          asset_name: MyApp-release.apk
+
