--- a/.github/workflows/ios-build-test.yml
+++ b/.github/workflows/ios-build-test.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Export IPA
         run: |
           xcodebuild -workspace ios/Runner.xcworkspace -scheme Runner -configuration Release CODE_SIGNING_REQUIRED=NO -sdk iphoneos -archivePath build/ios/archive/MyApp.xcarchive  clean archive -allowProvisioningUpdates
-          xcodebuild -exportArchive -archivePath build/ios/archive/MyApp.xcarchive -exportOptionsPlist ios/Runner/Info.plist -exportPath build/ios/ipa
+          xcodebuild -exportArchive -archivePath build/ios/archive/MyApp.xcarchive -exportOptionsPlist ios/export.plist -exportPath build/ios/ipa
 
       - name: Upload IPA artifact
         uses: actions/upload-artifact@v3
