--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
   freezed_annotation: ^2.4.1
   hooks_riverpod: ^2.4.0
   flutter_hooks: ^0.20.1
-  #isar: ^3.1.0+1
+  isar: ^3.1.0+1
   go_router: ^11.0.0
   path_provider: ^2.1.1
   cookie_jar: ^4.0.8
@@ -54,20 +54,9 @@ dependencies:
   easy_debounce: ^2.0.3
   dynamic_color: ^1.6.7
   material_color_utilities: ^0.11.1
-  #isar_flutter_libs: ^3.1.0+1
+  isar_flutter_libs: ^3.1.0+1
   url_launcher: ^6.1.14
-  isar:
-    hosted:
-      name: isar
-      url: https://pub.isar-community.dev/
-    version: ^3.0.0
 
-  isar_flutter_libs:
-    hosted:
-      name: isar_flutter_libs
-      url: https://pub.isar-community.dev/
-    version: ^3.0.0
-  
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -83,12 +72,7 @@ dev_dependencies:
   custom_lint: ^0.5.3
   riverpod_lint: ^2.1.0
   json_serializable: ^6.7.1
-  #isar_generator: ^3.1.0+1
-  isar_generator:
-    hosted:
-      name: isar_generator
-      url: https://pub.isar-community.dev/
-    version: ^3.0.0
+  isar_generator: ^3.1.0+1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
