--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -69,14 +69,14 @@ subprojects {
   // fix for verifyReleaseResources
   // ============
   afterEvaluate { project ->
-    if (project.plugins.hasPlugin(“com.android.application”) ||
-      project.plugins.hasPlugin(“com.android.library”)) {
+    if (project.plugins.hasPlugin("com.android.application") ||
+      project.plugins.hasPlugin("com.android.library")) {
       project.android {
         compileSdkVersion 34
-        buildToolsVersion “34.0.0”
+        buildToolsVersion "34.0.0"
       }
     }
-    if (project.hasProperty(“android”)) {
+    if (project.hasProperty("android")) {
       project.android {
         if (namespace == null) {
           namespace project.group
@@ -85,6 +85,6 @@ subprojects {
     }
   }
   // ============
-  project.buildDir = “${rootProject.buildDir}/${project.name}”
-  project.evaluationDependsOn(“:app”)
+  project.buildDir = "${rootProject.buildDir}/${project.name}"
+  project.evaluationDependsOn(":app")
 }
