--- a/.github/workflows/Flutter_Windows.yaml
+++ b/.github/workflows/Flutter_Windows.yaml
@@ -33,32 +33,32 @@ jobs:
      # - name: Run the app (optional)
      #   run: flutter devices # 可选步骤，用于在模拟器或设备上运行应用
 
-      - name: Build APK for release
-        run: flutter build windows --verbose # 构建 APK 文件
+      - name: Build EXE for release
+        run: flutter build windows --verbose 
 
-      - name: Upload APK artifact
+      - name: Upload artifact
         uses: actions/upload-artifact@v3
         with:
-          name: MyApp-APK
-          path: build/app/outputs/  # 上传生成的 APK 文件
+          name: UniAPP
+          path: build/windows/  
      
-      # - name: Create GitHub Release
-      #   id: create_release
-      #   uses: actions/create-release@v1
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      #   with:
-      #     tag_name: "${{ github.event.inputs.target }}" # 指定的更新版本号
-      #     release_name: "APK Release ${{ github.event.inputs.target }}"
-      #     draft: ${{ github.event.inputs.draft }}
-      #     prerelease: ${{ github.event.inputs.prerelease }}
+      - name: Create GitHub Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: "${{ github.event.inputs.target }}" # 指定的更新版本号
+          release_name: "APK Release ${{ github.event.inputs.target }}"
+          draft: ${{ github.event.inputs.draft }}
+          prerelease: ${{ github.event.inputs.prerelease }}
 
-      # - name: Upload APK to Release
-      #   uses: actions/upload-release-asset@v1
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      #   with:
-      #     upload_url: ${{ steps.create_release.outputs.upload_url }}
-      #     asset_path: build/app/outputs/flutter-apk/app-release.apk
-      #     asset_name: Android_${{ github.event.inputs.target }}.apk
-      #     asset_content_type: application/vnd.android.package-archive
+      - name: Upload EXE to Release
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: build\windows\x64\runner\Release\wenku8x.exe
+          asset_name: Windows_${{ github.event.inputs.target }}.exe
+          asset_content_type: application/vnd.microsoft.portable-executable
